<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:background="@drawable/widget_background">

    <ImageView
        android:id="@+id/widgetBtnVolDown"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:padding="12dp"
        android:layout_margin="2dp"
        android:background="@drawable/widget_button_bg"
        android:src="@drawable/ic_volume_down"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/widgetBtnNormal"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1.2"
        android:padding="12dp"
        android:layout_margin="2dp"
        android:background="@drawable/widget_button_bg"
        android:src="@drawable/ic_ring"
        android:contentDescription="@string/mode_normal" />

    <ImageView
        android:id="@+id/widgetBtnVibrate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1.2"
        android:padding="12dp"
        android:layout_margin="2dp"
        android:background="@drawable/widget_button_bg"
        android:src="@drawable/ic_vibrate"
        android:contentDescription="@string/mode_vibrate" />

    <ImageView
        android:id="@+id/widgetBtnDnd"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1.2"
        android:padding="12dp"
        android:layout_margin="2dp"
        android:background="@drawable/widget_button_bg"
        android:src="@drawable/ic_dnd"
        android:contentDescription="@string/mode_dnd" />

    <ImageView
        android:id="@+id/widgetBtnVolUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:padding="12dp"
        android:layout_margin="2dp"
        android:background="@drawable/widget_button_bg"
        android:src="@drawable/ic_volume_up"
        android:contentDescription="@null" />

</LinearLayout>
